@@ -8,6 +8,9 @@ else
 PYBIND_CFLAGS =
 endif
 
+## Can't do this while Types.cpp needs the conversion stuff in Types.h
+##AM_CXXFLAGS = -DWFMATH_CONVERSION
+
 INCLUDES += $(PYBIND_CFLAGS)
 liberis_la_LDFLAGS = -version-info 0:0:0 $(RELEASE)
 	
