@@ -1,6 +1,6 @@
 AC_INIT(src/Entity.cpp)
 
-AM_INIT_AUTOMAKE(eris, 0.9.1)
+AM_INIT_AUTOMAKE(eris, 0.9.2)
 AM_MAINTAINER_MODE
 
 AM_CONFIG_HEADER(config.h)	
@@ -49,6 +49,11 @@ AM_PATH_ATLAS(0.4.4, [
 	AC_MSG_ERROR(Couldn't find Atlas or version is insufficent)
 )
 
+dnl Check for WFMath library
+AC_CHECK_LIB(wfmath,  main,          LIBS="$LIBS -lwfmath", [             
+                         AC_MSG_ERROR(Couldn't find wfmath library.);  ])
+
+
 AC_LANG_RESTORE
 
 AC_ARG_ENABLE(python, 
@@ -63,7 +68,7 @@ AC_SUBST(CXXFLAGS)
 AC_SUBST(LDFLAGS)
 
 SYSTEM_LIBS=""
-ERIS_LIBS="-leris"
+ERIS_LIBS="-leris -lwfmath"
 ERIS_CFLAGS=""
 AC_SUBST(SYSTEM_LIBS)
 AC_SUBST(ERIS_LIBS)
